second level cache enabling